--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,19 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  scrollable_positioned_list: ^0.1.7
-  carousel_slider: ^2.2.1
-  font_awesome_flutter: ^8.8.1
+  scrollable_positioned_list: ^0.3.2
+  carousel_slider: ^4.1.1
+  font_awesome_flutter: ^10.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.4
   rxdart: ^0.27.3
 
 dev_dependencies:
