--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,11 @@ dependencies:
   scrollable_positioned_list: ^0.3.2
   carousel_slider: ^4.1.1
   font_awesome_flutter: ^10.1.0
-
+  flutter_inappwebview: ^5.4.3+7
+  geolocator: ^8.2.1
+  async: ^2.8.2
+  url_launcher: ^6.1.5
+  http: ^0.13.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
