--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,7 +27,7 @@ dependencies:
   carousel_slider: ^4.1.1
   font_awesome_flutter: ^10.1.0
   flutter_inappwebview: ^5.4.3+7
-  geolocator: ^8.2.1
+  geolocator: 9.0.1
   async: ^2.8.2
   url_launcher: ^6.1.5
   http: ^0.13.4
