--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
 }
 
 flutter {
