--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,22 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  async: ^2.8.2
-  carousel_slider: ^4.1.1
-  flutter_inappwebview: ^5.4.3+7
-  font_awesome_flutter: ^10.1.0
+  async: 2.8.2
+  carousel_slider: 4.1.1
+  flutter_inappwebview: 5.4.3+7
+  font_awesome_flutter: 10.1.0
   geolocator: 9.0.1
-  image_picker: ^0.8.5+3
-  path: ^1.8.1
-  path_provider: ^2.0.11
-  scrollable_positioned_list: ^0.3.2
-  url_launcher: ^6.1.5
-  http: ^0.13.4
-  rxdart: ^0.27.3
+  image_picker: 0.8.5+3
+  intl: 0.17.0
+  path: 1.8.1
+  path_provider: 2.0.11
+  scrollable_positioned_list: 0.3.2
+  url_launcher: 6.1.5
+  http: 0.13.4
+  rxdart: 0.27.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.4
+  cupertino_icons: 1.0.4
 
 dev_dependencies:
   flutter_test:
