--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   webview_flutter: ^3.0.4
   font_awesome_flutter: 10.1.0
   geolocator: 9.0.1
-  image_picker: 0.8.5+3
+  # image_picker: 0.8.5+3
+  camera: 0.10.0+1
+  image: 3.2.0
   intl: 0.17.0
   path: 1.8.1
   path_provider: 2.0.11
@@ -37,7 +39,7 @@ dependencies:
   url_launcher: 6.1.5
   http: 0.13.4
   rxdart: 0.27.3
-  file_picker: ^5.0.1
+  file_picker: 5.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
