--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   async: 2.8.2
   carousel_slider: 4.1.1
   # flutter_inappwebview: 5.4.3+7
-  webview_flutter: ^3.0.4
+  webview_flutter: 3.0.4
   font_awesome_flutter: 10.1.0
   geolocator: 9.0.1
   # image_picker: 0.8.5+3
@@ -40,6 +40,8 @@ dependencies:
   http: 0.13.4
   rxdart: 0.27.3
   file_picker: 5.0.1
+  art_sweetalert: 0.0.5
+  shared_preferences: 2.0.15
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
