--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,13 @@ dependencies:
   path_provider: 2.0.11
   scrollable_positioned_list: 0.3.2
   url_launcher: 6.1.5
-  http: 0.13.4
+  # http: 0.13.4
   rxdart: 0.27.3
   file_picker: 5.0.1
   art_sweetalert: 0.0.5
   shared_preferences: 2.0.15
+  flutter_spinkit: 5.1.0
+  dio: 4.0.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
