--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shared_preferences: 2.0.15
   flutter_spinkit: 5.1.0
   dio: 4.0.6
+  tuple: 2.0.0
+  encrypt: 5.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
