--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/img/logo-ypsim.jpeg"
+  web: 
+    generate: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
