--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: 0.10.0
 
 dev_dependencies:
   flutter_test:
