--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   file_picker: 5.0.1
   art_sweetalert: 0.0.5
   shared_preferences: 2.0.15
+  shared_preferences_web: 2.0.4
   flutter_spinkit: 5.1.0
   dio: 4.0.6
   tuple: 2.0.0
@@ -50,6 +51,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
   flutter_launcher_icons: 0.10.0
+  webview_flutter_web: 0.1.0+4
 
 dev_dependencies:
   flutter_test:
