--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   tuple: 2.0.0
   encrypt: 5.0.1
   flutter_pdfview: 1.2.3
+  pointer_interceptor: ^0.9.3+3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
