--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: absensi_ypsim
+name: SIMAt
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -61,7 +61,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/img/logo-ypsim.jpeg"
+  image_path: "assets/img/logo-app.png"
   web: 
     generate: true
 # For information on the generic Dart part of this file, see the
