--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            ndk {
+                abiFilters 'armeabi-v7a','arm64-v8a','x86_64'
+            }
         }
     }
     compileOptions {
