--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  camera_android:
+    git:
+      url: https://github.com/elmar001/plugins.git
+      path: packages/camera/camera_android
+      ref: 5172b44088a4082ff0899594614c5380457d341b
+      
 flutter_icons:
   android: true
   ios: true
