--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,11 +48,12 @@ dependencies:
   encrypt: 5.0.1
   flutter_pdfview: 1.2.3
   pointer_interceptor: 0.9.3+3
+  webview_flutter_web: 0.1.0+4
+  in_app_update: 4.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
   flutter_launcher_icons: 0.10.0
-  webview_flutter_web: 0.1.0+4
 
 dev_dependencies:
   flutter_test:
