--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,16 +48,24 @@ dependencies:
   encrypt: 5.0.1
   flutter_pdfview: 1.2.3
   pointer_interceptor: 0.9.3+3
+  webview_flutter_web: 0.1.0+4
+  in_app_update: 4.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
   flutter_launcher_icons: 0.10.0
-  webview_flutter_web: 0.1.0+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  camera_android:
+    git:
+      url: https://github.com/elmar001/plugins.git
+      path: packages/camera/camera_android
+      ref: 5172b44088a4082ff0899594614c5380457d341b
+      
 flutter_icons:
   android: true
   ios: true
