--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   pointer_interceptor: 0.9.3+3
   webview_flutter_web: 0.1.0+4
   in_app_update: 4.0.1
+  flutter_image_compress: 1.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.4
